[package]
name = "ripress"
version = "1.9.3"
edition = "2024"
description = "An Express.js-inspired web framework for Rust"
license = "MIT"
authors = ["You guru911u@gmail.com"]
keywords = ["http", "server", "framework", "web"]
categories = ["web-programming::http-server"]
repository = "https://github.com/guru901/ripress"
exclude = ["tests/*", "docs/*", "CHANGELOG.md", "CONTRIBUTING.md", ".github", "benchmark.png", "scripts/*"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
url = "2.5.4"
futures = "0.3.31"
bytes = "1.10.1"
hyper = { version = "0.14.32", features = ["stream"] }
routerify = "3.0.0"
cookie = "0.18.1"
hyper-staticfile = "0.9"
mime = "0.3.17"
urlencoding = "2.1.3"
uuid = { version="1.18.0", features = ["v4"] }
infer = "0.19.0"
flate2 = "1.1.2"
mime_guess = "2.0.5"
tracing = "0.1.41"

[dev-dependencies]
reqwest = "0.12.23"
tempfile = "3.10.1"
tracing-subscriber = "0.3"


[package.metadata.docs.rs]
readme = "README.md"

[features]
with-wynd = []
default = []
