[package]
name = "ripress-derive"
version = "2.1.1"
edition = "2024"
description = "Procedural macros for ripress"
license = "MIT"
authors = ["You guru911u@gmail.com"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.111", features = ["full"] }
quote = "1.0.42"
proc-macro2 = "1.0.86"
