[package]
name = "ripress-derive"
version = "0.0.1"
edition.workspace = true
description = "Procedural macros for ripress"
license.workspace = true
repository.workspace = true
authors = ["You guru911u@gmail.com"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.111", features = ["full"] }
quote = "1.0.42"
proc-macro2 = "1.0.86"
