[package]
name = "ripress"
version = "2.2.0"
edition.workspace = true
description = "An Express.js-inspired web framework for Rust"
license.workspace = true
authors = ["You guru911u@gmail.com"]
keywords = ["http", "server", "framework", "web"]
categories = ["web-programming::http-server"]
repository.workspace = true
exclude = [
    "tests/*",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    ".github",
    "benchmark.png",
    "scripts/*",
    "examples/*",
]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
url = "2.5.4"
futures = "0.3.31"
bytes = "1.10.1"
routerify_ng = "0.3.0"
cookie = "0.18.1"
mime = "0.3.17"
urlencoding = "2.1.3"
uuid = { version = "1.18.0", features = ["v4"], optional = true }
infer = "0.19.0"
flate2 = { version = "1.1.2", optional = true }
mime_guess = "2.0.5"
tracing = { version = "0.1.41", optional = true }
hyper = { version = "1.8.1", features = ["http2"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.3"
hyper-staticfile = "0.10.1"
ahash = "0.8.12"
ripress-derive = { version = "0.0.2"}
validator = { version = "0.20.0", features = ["derive"], optional = true}

[dev-dependencies]
tracing-subscriber = "0.3.20"
reqwest = { version = "0.12.23", features = ["json"] }
tempfile = "3.10.1"
criterion = "0.7.0"

[package.metadata.docs.rs]
readme = "README.md"

[features]
default = ['validation']
with-wynd = []
compression = ["flate2"]
file-upload = ["uuid"]
logger = ["tracing"]
validation = ["validator"]

[profile.release]
debug = true

[[bench]]
name = "ripress_benches"
harness = false

[[example]]
name = "validation"
path = "examples/validation.rs"
required-features = ["validation"]

[[example]]
name = "extractors"
path = "examples/extractors.rs"

[[example]]
name = "cookies"
path = "examples/cookies.rs"

[[example]]
name = "forms"
path = "examples/forms.rs"

[[example]]
name = "sse"
path = "examples/sse.rs"

[[example]]
name = "crud_api"
path = "examples/crud_api.rs"

[[example]]
name = "middleware_chain"
path = "examples/middleware_chain.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "static_files"
path = "examples/static_files.rs"

[[example]]
name = "router_versioning"
path = "examples/router_versioning.rs"
